--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,20 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.button {
+    &__add {
+        position: fixed;
+        top: 50vh;
+        right: 2vw;
+        border-radius: .75rem;
+        background-color: rgba(0, 100, 100, 0.5);
+        padding: .75rem;
+        transition-duration: .1s;
+    }
+    
+    &:hover {
+        transition-duration: .1s;
+        background-color: rgb(0, 200, 200, 0.7);
+    }
+}
